--- a/Parciales/Parcial2_SyS_2024_2.ipynb
+++ b/Parciales/Parcial2_SyS_2024_2.ipynb
@@ -27,14 +27,11 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "ZORkpMEV6i0y"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "source": [
+        "#####**Estudiantes: Juan Camilo Holguin - Juan Camilo Cardona**\n",
+        "\n",
+        "\n",
+        "\n",
         "##**Primer punto:**\n",
         "\n",
         "Encuentre la expresión del espectro de Fourier (forma exponencial y trigonométrica) para la señal $x(t) = \\left|A\\cos\\left(2\\pi*Fo\\right)\\right|^2$, con $t\\in [-1/2Fo, 1/2Fo]$. con A,Fo ∈ R+. Realice las simulaciones respectivas para graficar el espectro de Fourier del ejercicio 1 (magnitud\n",
